--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -37,7 +37,7 @@ section img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: radial-gradient(#00ffee, #fbbe6e);
+    background: radial-gradient(#BBBFCA, #495464);
 }
 
 /* TEST PAGE */
@@ -84,7 +84,29 @@ button {
 
         a {
             font-size: var(--fsz-menu);
+            color: #BBBFCA;
             text-transform: uppercase;
         }
+    }
+}
+
+/* ABOUT PAGE */
+
+.about {
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    left: 100%;
+
+    padding: 5rem;
+
+    display: flex;
+
+    >div {
+        flex: 2;
+    }
+
+    >figure {
+        flex: 3;
     }
 }
